@@ -3,11 +3,19 @@ v1.0:
 o Fixed v3.newzbin.com's DirectNZB support which was broken as of
   2007-02-18
 
+o Improved downloader performance (CPU used and max download speed),
+  especially for faster connections (such as over 40mb/s)
+
 o Added support for libnotify notifications (patch submitted by Ruben
   Fonseca)
 
 o No longer hiding exceptions; many were previously only shown in the
   debug log file.
+
+o Now printing the 'Transferred MB in Time at Speed (Archive)' message
+  when the NZB is finished downloading, as opposed to when the archive
+  has finished decoding. The difference could be significant on slower
+  CPUs/ and or faster connections
 
 
 v0.11:
